<resources>
    <string name="app_name">Oryx Barcode Scanner</string>

    <string name="action_new">New</string>
    <string name="action_new_product">Product</string>
    <string name="action_new_market">Market</string>

    <string name="action_find">Find</string>
    <string name="action_find_product">Product</string>
    <string name="action_find_market">Market</string>

    <string name="action_gps_trucker">Gps Trucker</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="barCode">Bar code</string>
    <string name="codeFormat">Code format</string>
    <string name="name">Name</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="mobileNumber">Mobile NumbermobileNumber</string>
    <string name="reEnterPassword">Re-enter Password</string>
    <string name="createAccount">Create Account</string>
    <string name="alreadyMember">Already a member? Login</string>
    <string name="description">Description</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sector">Sector</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="adress">Adress</string>
    <string name="imthere">I\'m there</string>

    <string name="host">Host</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signUp">SignUp</string>

    <string name="rememberMe">Remember me.</string>
    <string name="keepConnected">Keep connected.</string>
    <string name="noAccountYet">No account yet? Create one</string>

    <string name="sinGooglePlus">Sign in with Google+</string>
    <string name="sinTwiter">Sign in with Twitter</string>
    <string name="sinFacebook">Sign in with Faceboook</string>

    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="scan">Scan</string>
</resources>
